assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@300&family=Amatic+SC&display=swap');

/* remove default styles added by the browser to all elements */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
/*================================================================*/
/* general styles */
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  color: white;
  font-family: 'Poppins', sans-serif;
  background-color: rgb(70, 22, 154, 0.7);
}

a {
  text-decoration: none;
  color: white;
}

a:hover {
  color: rgb(255, 255, 255);
}

i {
  padding: 0.5em 0.5em;
}

.heading-sm {
  color: rgb(70, 22, 154);
  background-color: rgb(255, 192, 203);
  border-bottom-left-radius: 15px;
  border-top-right-radius: 15px;
  border: 2px solid rgb(255, 255, 255);
  width: 70%;
  margin: auto;
}

.rounded-logo {
  border-top-right-radius: 15px;
  border-bottom-left-radius: 15px;
  border: 1px solid rgb(255, 192, 203);
  font-size: 150%;
  background-color: white;
  color: rgb(255, 192, 203);
  margin-top: 5px;
}

.testimonial {
  margin: 20px auto;
  width: 80%;
  font-size: large;
  text-align: center;
  font-family: 'Amatic SC', sans-serif ;
}

/* transfrom an item up 7px on hover */
.trans:hover {
  transform: translateY(-7px);
  transition: all 0.3s;
  background-color: var(--clr-accent);
  color:rgb(70, 22, 154, 0.7);
}

/* transfrom an item right 7px on hover */
.trans-right:hover {
  transform: translateX(7px);
  transition: all 0.3s;
  background-color: var(--clr-accent);
  color: rgb(255, 255, 255);
}
/*================================================================*/
/* footer styling */
footer {
  width: 100%;
  background-color: rgb(255, 192, 203);
  position: fixed;
  left: 0;
  bottom: 0;
  text-align: center;
  font-size: 125%;
  justify-content: space-evenly;
}
/*================================================================*/
/* style the header and logo */
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 99;
  background-color: rgb(70, 22, 154, 0.7);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2em;
  border-bottom: 2px solid rgb(255, 192, 203);
}

#logo {
width: clamp(200px, 50%, 400px);
}
/*================================================================*/
/* styling for the nav bar */
ul {
  list-style-type: none;
  padding: 1em 0 1em 0;
  line-height: 30px;
}

nav {
  position: absolute;
  top: 70px; /* controls how far from the top the menu is */
  right: 10px; /* controls how far from the right the menu is */
  background-color: rgb(255, 192, 203, 0.9);
  padding: 0 1rem;
  border: 2px solid rgb(255, 255, 255);
  border-radius: 15px;
  display: none;
  color: rgb(70, 22, 154);
}

/* nav toggle on/off */
#nav-toggle:checked~nav {
  display: block;
}

#nav-toggle {
  display: none;
}

.nav-toggle-label {
  font-size: 2rem;
}

/* styling for the nav bar links */
header a {
  text-decoration: none; /* Remove the underline */
  color: inherit;
}

/* show when a page is active */
.active { 
  border-bottom: 1px solid rgb(70, 22, 154);
}
/*================================================================*/
/* add the hero section with a background image */
#hero-section {
  width: 80%;
  height: 115px;
  margin: 20px auto 0;
  border-radius: 25px;
  position: absolute;
  top: 60px;
  left: 10%;
  border: 2px solid rgb(255, 255, 255);
}

#hero-section p {
  text-align: center;
  font-size: 210%;
  color: rgb(70, 22, 154);
  font-weight: bolder;
  letter-spacing: 0.1em;
  font-family: 'Oswald', sans-serif;
  text-shadow: -1px -1px 0 rgb(255, 192, 203), 1px -1px 0 rgb(255, 192, 203), -1px 1px 0 rgb(255, 192, 203), 1px 1px 0 rgb(255, 192, 203);
  height: 115px;
  border-radius: 25px;
  background-color: rgb(255, 192, 203);
}
/*================================================================*/
/* styling for the index page */
#index-body {
  font-weight: bold;
  width:80%;
  margin: auto;
  margin-top: 200px;
  text-align: center;
}

#index-body div a p:hover {
  color: rgb(255, 192, 203);
}

#main-links {
  margin: auto;
  width: 60%;
  text-align: left;
}

#main-links .right a p {
  text-align: right;
}
/*================================================================*/
/* help page styling */
#main-help {
  width:80%;
  align-self: center;
  margin: 100px 0 50px 0;
  text-align: center;
  font-size: smaller;
}

.help-block {
  text-align: center;
  margin: auto;
  margin-bottom: 20px;
  width: 50%;
}

.accreditation {
  border-bottom-left-radius: 15px;
  border-top-right-radius: 15px;
  border: 2px solid rgb(255, 192, 203);
  margin-bottom: 20px;
  text-align: center;
}

.accreditation-img img {
  width: 60px;
  height: 60px;
}

div img {
  height: 90px;
  width: 90px;
  border-bottom-left-radius: 15px;
  border-top-right-radius: 15px;
  padding: 10px;
  margin-top: 10px;
  border: 2px solid rgb(255, 255, 255);
}
/*================================================================*/
/* booking page styling */
#main-book {
  text-align: center;
  width: 80%;
  margin: auto;
  margin-top: 100px;
  margin-bottom: 50px;
}

.container {
  display: flex;
  flex-direction: column;
  gap: 10px; /* gap between rows */
}

.row {
  display: flex;
  gap: 10px; /* gap between blocks */
}

.block {
  padding: 10px;
  text-align: center;
  flex: 1; /* distribute available space evenly */
}

#featured {
  border: 2px solid rgb(255, 192, 203);
  border-bottom-left-radius: 25px;
  border-top-right-radius: 25px;
  width: 60%;
  margin: auto;
}

.booking-info {
  margin: 20px 0 20px 0;
}
/*================================================================*/
/* about me page styling */
#main-about {
  width: 80%;
  align-self: center;
  text-align: center;
  margin: 100px 0 50px 0;
}

.profile-pic {
  width: 125px;
  height: 187.5px;
  border-radius: 40%;
  border: 2px solid rgb(255, 255, 255);
}

.profile-pic-active {
  width: 303px;
  height: 100px;
  border-radius: 50%;
  border: 2px solid rgb(255, 255, 255);
}

.profile-pic-steps {
  border-radius: 50%;
  border: 2px solid rgb(255, 255, 255);
}
/*================================================================*/
/* contact me page styling */
#main-contact {
  width: 80%;
  align-self: center;
  text-align: center;
  margin: 100px 0 50px 0 ;
}

.contact-pic {
  width: 125px;
  height: 125px;
  border-radius: 30%;
  border: 2px solid rgb(255, 255, 255);
}

#signup-form {
  display: flex;
  flex-direction: column;
}

#submit {
  background-color: rgb(255, 192, 203);
  border-bottom-left-radius: 15px;
  border-top-right-radius: 15PX;
  width: 100px;
  height: 30px;
  margin: auto;
  color: rgb(70, 22, 154);
  font-size: larger;
  font-weight: 700;
  border: 2px solid rgb(255, 255, 255);
  letter-spacing: 2px;
  margin-top: 20px;
}

input {
  background-color: rgb(255, 192, 203, 0.8);
  height: 30px;
  margin: auto;
  font-size: large;
  font-weight: 600;
  color: rgb(70, 22, 154);
  border: 1px solid rgb(255, 255, 255);
  border-radius: 5px;
}
#first-name, #last-name {
  width: 150px;
}

#email {
  width: 250px;
}

#age {
  width: 75px;
}

label {
  margin-top: 10px;
}

.radio {
  margin: auto;
  text-align: left;
  padding-left: 50px;
}

input[type="radio"] {
  height: 25px;
  width: 25px;
}

#contact-footer {
  text-align: center;
}

iframe {
width: 80%;
height: 40%;
margin-bottom: 50px;
}

.sidebar {
  display: none;
  flex-direction: column;
  margin: auto;
  margin-top: 100px;
}

/*================================================================*/
/* Styles for portrait tablets, portrait iPad, e-readers, landscape 800x480 phones */
@media (min-width: 600px) {
  .testimonial {
    width: 50%;
  }

  #index-body {
    margin-top: 120px;
  }

  #main-links {
    width: 40%;
  }

}

/* Styles for landscape tablets, landscape iPad, low-resolution laptops and desktops */
@media (min-width: 801px) {
  #hero-section {
    height: 80px;
    top: 100px;
  }

  #hero-section p {
    height: 80px;
  }

  #index-body {
    margin-top: 100px;
  }

  .accreditation {
    width: 60%;
    margin: auto;
  }

  #main-book {
    margin-top: 120px;
    font-size: large;
  }

  #featured {
    width: 300px;
  }

  .heading-sm {
    width: 300px;
  }

  #main-about {
    width: 70%;
    margin: 120px 0 50px 0;
    font-size: large;
  }

  #main-links {
    width: 30%;
  }

  #main-contact {
    width: 80%;
    justify-content: center;
    margin: 120px 0 50px 0;
    font-size: large;
  }

  .help-block {
  font-size: large;
    width: 50%;
  }
}

/* Styles for big landscape tablets, laptops, and desktops */
@media (min-width: 1025px) {
  #hero-section {
    width: 60%;
    left: 20%;
  }

  #index-body {
    margin-top: 120px;
  }

  div img {
    height: 150px;
    width: 150px;
  }

  .testimonial {
    width: 30%;
    font-size: larger;
  }

  #main-help {
    width:50%;
    margin: 120px 0 50px 0;
    font-size: large;
  }

  #main-book {
    font-size: large;
    margin-top: 120px;
  }

  iframe {
    width: 60%;
  }

  #main-links {
    width: 25%;
  }

 }

/* Styles for high-resolution laptops and desktops */
@media (min-width: 1281px) {

  #index-body {
    margin-top: 140px;
    font-size: large;
  }

  #hero-section {
    width: 50%;
    left: 25%;
  } 
  #featured {
    width: 300px;
  }

  .heading-sm {
    width: 300px;
  }

  .container {
    display: inline-block;
  }
  #main-about {
    width: 50%;
  }

  .profile-pic {
    width: 200px;
    height: 300px;
    border-radius: 40%;
  }

  .profile-pic-active {
    width: 606px;
    height: 200px;
    border-radius: 50%;
  }
  
  .profile-pic-steps {
    width: 200px;
    height: 200px;
  }

 
  #main-contact {
    display: flex;
  }
  
  .sidebar {
     display: flex;
     height: 450px;
     width: auto;
     margin: 100px  50px 0 50px;
  }

  #contact-mid {
    margin: 0px 50px 0 50px;
  }

  #main-links {
    width: 20%;
  }

}

